--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-11 Thu 19:39 -->
+<!-- 2024-02-09 Fri 12:27 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Reilly Raab</title>
@@ -52,7 +52,7 @@ table {
   <div>
 
 
-<figure id="org3c126e3">
+<figure id="org60c6db1">
 <img src="./img/raab_headshot.jpg" alt="raab_headshot.jpg">
 
 </figure>
@@ -179,17 +179,22 @@ sophomoric concern with the <a href="https://en.wikipedia.org/wiki/Measurement_p
 <tbody>
 <tr>
 <td class="org-left"><strong>Machine Learning</strong></td>
-<td class="org-left">Multi-agent Systems, Reinforcement Learning, Nonstationary Environments.</td>
+<td class="org-left"><kbd>Multi-agent Systems</kbd>, <kbd>Reinforcement Learning</kbd>, <kbd>Nonstationary Environments</kbd>.</td>
 </tr>
 
 <tr>
 <td class="org-left"><strong>Optimization</strong></td>
-<td class="org-left">Convex Optimization, Evolutionary Game Theory, Approximate Newton Methods.</td>
+<td class="org-left"><kbd>Convex Optimization</kbd>, <kbd>Evolutionary Game Theory</kbd>, <kbd>Approximate Newton Methods</kbd>.</td>
+</tr>
+
+<tr>
+<td class="org-left"><strong>Mathematics</strong></td>
+<td class="org-left"><kbd>Information Theory</kbd>, <kbd>Linear Algebra</kbd>, <kbd>Vector Calculus</kbd>, <kbd>Variational Calculus</kbd>.</td>
 </tr>
 
 <tr>
 <td class="org-left"><strong>Programming</strong></td>
-<td class="org-left">GNU/Linux, Python (incl. NumPy, SciPy, Jax, Taichi, Gym), C, Lisp, JavaScript, Open-Source.</td>
+<td class="org-left"><kbd>GNU/Linux</kbd>, <kbd>Python</kbd> (incl. <kbd>NumPy</kbd>, <kbd>SciPy</kbd>, <kbd>Jax</kbd>, <kbd>Taichi</kbd>, <kbd>Gym</kbd>), <kbd>C</kbd>, <kbd>Open-Source</kbd>.</td>
 </tr>
 </tbody>
 </table>
@@ -241,6 +246,97 @@ sophomoric concern with the <a href="https://en.wikipedia.org/wiki/Measurement_p
 <li>UC Education Abroad Program Scholarship</li>
 <li>UCSB Education Abroad Program Scholarship</li>
 </ul>
+</div>
+</div>
+<div id="outline-container-Awards" class="outline-2">
+<h2 id="Awards">Awards</h2>
+<div class="outline-text-2" id="text-orgc39ad91">
+<table class='awards'>
+<tr>
+<td class="awards-a"><p><b>Paper Awards</b></p></td>
+<td class="awards-b"></td>
+<td class="awards-c"><td>
+</tr> 
+<tr>
+<td class="awards-a">Best Paper Runner-Up {6}</td>
+<td class="awards-b">RTML workshop at ICLR </td>
+<td class="awards-c">2023<td>
+</tr> 
+<tr>
+<td class="awards-a">Highlighted Paper {6}</td>
+<td class="awards-b">RMTL Workshop at ICLR</td>
+<td class="awards-c">2023<td>
+</tr> 
+<tr>
+<td class="awards-a">Spotlight Paper {3}</td>
+<td class="awards-b">NeurIPS</td>
+<td class="awards-c">2021<td>
+</tr> 
+<tr>
+<td class="awards-a"><p><b>Academic Honors</b></p></td>
+<td class="awards-b"></td>
+<td class="awards-c"><td>
+</tr> 
+<tr>
+<td class="awards-a">Advancement with Honors</td>
+<td class="awards-b">UC Santa Cruz</td>
+<td class="awards-c">2021<td>
+</tr> 
+<tr>
+<td class="awards-a">High Honors (BSc in Physics)</td>
+<td class="awards-b">UC Santa Barbara</td>
+<td class="awards-c">2015<td>
+</tr> 
+<tr>
+<td class="awards-a">Distinction in the Major (Physics)</td>
+<td class="awards-b">UC Santa Barbara</td>
+<td class="awards-c">2015<td>
+</tr> 
+<tr>
+<td class="awards-a"><p><b>Scholarships and Fellowships</b></p></td>
+<td class="awards-b"></td>
+<td class="awards-c"><td>
+</tr> 
+<tr>
+<td class="awards-a">Dissertation Year Fellowship (Winter)</td>
+<td class="awards-b">UC Santa Cruz</td>
+<td class="awards-c">2024<td>
+</tr> 
+<tr>
+<td class="awards-a">Dissertation Year Fellowship (Fall)</td>
+<td class="awards-b">UC Santa Cruz</td>
+<td class="awards-c">2023<td>
+</tr> 
+<tr>
+<td class="awards-a">Merit-Based Scholarship</td>
+<td class="awards-b">ARCS Foundation, Inc. (Northern California Chapter)</td>
+<td class="awards-c">2022<td>
+</tr> 
+<tr>
+<td class="awards-a">Regents Fellowship</td>
+<td class="awards-b">UC Santa Cruz</td>
+<td class="awards-c">2019<td>
+</tr> 
+<tr>
+<td class="awards-a">Dean's Fellowship</td>
+<td class="awards-b">UC Santa Cruz</td>
+<td class="awards-c">2019<td>
+</tr> 
+<tr>
+<td class="awards-a">Education Abroad Scholarship</td>
+<td class="awards-b">UC (All Campuses)</td>
+<td class="awards-c">2013<td>
+</tr> 
+<tr>
+<td class="awards-a">Education Abroad Scholarship</td>
+<td class="awards-b">UC Santa Barbara</td>
+<td class="awards-c">2013<td>
+</tr> 
+<tr>
+<td class="awards-a">Undergraduate Research Internship</td>
+<td class="awards-b">UC Santa Barbara</td>
+<td class="awards-c">2011<td>
+</tr></table>
 </div>
 </div>
 <div id="outline-container-Work-amp-Research-Experience" class="outline-2">
@@ -369,82 +465,6 @@ With a paid undergraduate research internship awarded by the UC Santa Barbara Ce
 </ul>
 </div>
 </div>
-<div id="outline-container-Awards" class="outline-2">
-<h2 id="Awards">Awards</h2>
-<div class="outline-text-2" id="text-orgc39ad91">
-<table class='awards'>
-<tr>
-<td class="awards-a">Dissertation Year Fellowship (Winter)</td>
-<td class="awards-b">UC Santa Cruz</td>
-<td class="awards-c">2024<td>
-</tr> 
-<tr>
-<td class="awards-a">Dissertation Year Fellowship (Fall)</td>
-<td class="awards-b">UC Santa Cruz</td>
-<td class="awards-c">2023<td>
-</tr> 
-<tr>
-<td class="awards-a">Best Paper Runner-Up {6}</td>
-<td class="awards-b">RTML workshop at ICLR </td>
-<td class="awards-c">2023<td>
-</tr> 
-<tr>
-<td class="awards-a">Highlighted Paper {6}</td>
-<td class="awards-b">RMTL Workshop at ICLR</td>
-<td class="awards-c">2023<td>
-</tr> 
-<tr>
-<td class="awards-a">Merit-Based Scholarship</td>
-<td class="awards-b">ARCS Foundation, Inc. (Northern California Chapter)</td>
-<td class="awards-c">2022<td>
-</tr> 
-<tr>
-<td class="awards-a">Advancement with Honors</td>
-<td class="awards-b">UC Santa Cruz</td>
-<td class="awards-c">2021<td>
-</tr> 
-<tr>
-<td class="awards-a">Spotlight Paper {3}</td>
-<td class="awards-b">NeurIPS</td>
-<td class="awards-c">2021<td>
-</tr> 
-<tr>
-<td class="awards-a">Regents Fellowship</td>
-<td class="awards-b">UC Santa Cruz</td>
-<td class="awards-c">2019<td>
-</tr> 
-<tr>
-<td class="awards-a">Dean's Fellowship</td>
-<td class="awards-b">UC Santa Cruz</td>
-<td class="awards-c">2019<td>
-</tr> 
-<tr>
-<td class="awards-a">High Honors (BSc in Physics)</td>
-<td class="awards-b">UC Santa Barbara</td>
-<td class="awards-c">2015<td>
-</tr> 
-<tr>
-<td class="awards-a">Distinction in the Major (Physics)</td>
-<td class="awards-b">UC Santa Barbara</td>
-<td class="awards-c">2015<td>
-</tr> 
-<tr>
-<td class="awards-a">Education Abroad Scholarship</td>
-<td class="awards-b">UC (All Campuses)</td>
-<td class="awards-c">2013<td>
-</tr> 
-<tr>
-<td class="awards-a">Education Abroad Scholarship</td>
-<td class="awards-b">UC Santa Barbara</td>
-<td class="awards-c">2013<td>
-</tr> 
-<tr>
-<td class="awards-a">Undergraduate Research Internship</td>
-<td class="awards-b">UC Santa Barbara</td>
-<td class="awards-c">2011<td>
-</tr></table>
-</div>
-</div>
 <div id="outline-container-Publications" class="outline-2">
 <h2 id="Publications">Publications</h2>
 <div class="outline-text-2" id="text-org199a52e">
@@ -505,7 +525,7 @@ Equal contribution
 </div>
 </main>
 <footer id="postamble" class="boilerplate">
-Copyright © 2023 Reilly Raab
+Copyright © 2024 Reilly Raab
 </footer>
 </body>
 </html>
