--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-11 Thu 09:38 -->
+<!-- 2024-02-02 Fri 13:25 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Reilly Raab</title>
@@ -28,10 +28,10 @@
 <h2 id="Pages">Pages</h2>
 <div class="outline-text-2" id="text-org17c217c">
 <p>
-<a href="./site-info.html">Technical Site Info</a> <br>
 <a href="./about.html">About Me</a> <br>
 <a href="./reading-list.html">Digital Bookshelf</a> <br>
-<a href="./demo.html">HTML Demo &amp; Reference</a>
+<a href="./demo.html">HTML Demo &amp; Reference</a> <br>
+<a href="./site-info.html">Technical Site Info</a>
 </p>
 </div>
 </div>
@@ -61,7 +61,7 @@
 </div>
 </main>
 <footer id="postamble" class="boilerplate">
-Copyright © 2023 Reilly Raab
+Copyright © 2024 Reilly Raab
 </footer>
 </body>
 </html>
