--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-02-09 Fri 12:27 -->
+<!-- 2024-04-17 Wed 09:44 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Reilly Raab</title>
@@ -52,27 +52,15 @@ table {
   <div>
 
 
-<figure id="org60c6db1">
+<figure id="org383ac93">
 <img src="./img/raab_headshot.jpg" alt="raab_headshot.jpg">
 
 </figure>
 
 <p>
 </div>
-<div>
+<div><br/><br/>
 </p>
-
-<p>
-Ph.D. Candidate (Graduating March 2024) <br>
-in <a href="https://www.soe.ucsc.edu/departments/computer-science-and-engineering">Computer Science and Engineering</a> <br>
-at <a href="https://en.wikipedia.org/wiki/University_of_California,_Santa_Cruz">UC Santa Cruz</a> <br>
-advised by <a href="http://www.yliuu.com">Yang Liu</a>
-</p>
-
-<p>
-<samp>rraab [at] ucsc (dot) edu</samp>
-</p>
-
 <ul class="org-ul">
 <li><a href="https://github.com/raabrp">Github</a></li>
 <li><a href="https://scholar.google.com/citations?user=kmyHu24AAAAJ">Google Scholar</a></li>
@@ -127,27 +115,28 @@ nav li {
 My resume is also available as a <a href="./files/reilly-raab-resume.pdf">PDF</a>.
 </center>
 </p>
+
 <div id="outline-container-Summary" class="outline-2">
 <h2 id="Summary">Summary</h2>
-<div class="outline-text-2" id="text-orge06f1c8">
+<div class="outline-text-2" id="text-org2e13903">
 <p>
-I am a PhD candidate in Computer Science and Engineering at UC Santa Cruz, set
-to graduate in March 2024. My doctoral research focuses on aligning local
-incentives with global objectives and constraints in multiagent systems
-involving machine learning.
+I recently completed a PhD in Computer Science and Engineering at UC Santa Cruz,
+where my doctoral research in machine learning focused on aligning local
+incentives with global objectives and constraints in multiagent systems.
 </p>
 
 <p>
-My background is in physics, with experience in scientific computing, signal
-processing for quantum systems, and electronics. I spent a few years between
-undergrad and grad school backpacking abroad, remotely developing software
-related to automated circuit design. I am actively looking for work.
+My previous background is in physics, with experience in scientific computing,
+signal processing for quantum systems, and electronics. I spent a few years
+between undergrad and grad school backpacking abroad and remotely developing
+software related to automated circuit design.
 </p>
 </div>
 </div>
+
 <div id="outline-container-Research-Interests" class="outline-2">
 <h2 id="Research-Interests">Research Interests</h2>
-<div class="outline-text-2" id="text-org91dcf50">
+<div class="outline-text-2" id="text-org38d21ba">
 <ul class="org-ul">
 <li>I strongly suspect that the next generation of &ldquo;Artificial Intelligence&rdquo; will
 not be focused on single models, but on multi-agent systems understood in terms
@@ -161,13 +150,15 @@ implies or is implied by the <a href="https://en.wikipedia.org/wiki/Fluctuation_
 humbling experience.</li>
 <li>I&rsquo;d like to better understand <a href="https://en.wikipedia.org/wiki/Quantum_decoherence">quantum decoherence</a>.  I never really outgrew a
 sophomoric concern with the <a href="https://en.wikipedia.org/wiki/Measurement_problem">Measurement Problem</a>.</li>
-<li>I would be keen to develop architectures for normalizing flows that allow exact or cheaply-approximated Fisher-Rao natural gradient descent. Such an architectures would allow accelerated simulation of evolutionary dynamics as a consequence of my prior work relating natural gradient descent and evolutionary game theory {5}.</li>
+<li>I would be keen to develop architectures for normalizing flows that allow exact or cheaply-approximated Fisher-Rao natural gradient descent. Such architectures would allow accelerated simulation of evolutionary dynamics as a consequence of my prior work relating natural gradient descent and evolutionary game theory {5}.</li>
 </ul>
 </div>
 </div>
+
+
 <div id="outline-container-Skills" class="outline-2">
 <h2 id="Skills">Skills</h2>
-<div class="outline-text-2" id="text-org0dbe43e">
+<div class="outline-text-2" id="text-orgc0a94c6">
 <table>
 
 
@@ -200,15 +191,16 @@ sophomoric concern with the <a href="https://en.wikipedia.org/wiki/Measurement_p
 </table>
 </div>
 </div>
+
 <div id="outline-container-Education" class="outline-2">
 <h2 id="Education">Education</h2>
-<div class="outline-text-2" id="text-org2de0763">
+<div class="outline-text-2" id="text-org27631b9">
 
 <div class="cv-block">
 <table>
 <tr>
-  <td><div class="cv-block-a">PhD, Computer Science and Engineering</div></td>
-  <td><div class="cv-block-b">Sept 2019 – Winter 2024 (Anticipated)</div></td>
+  <td><div class="cv-block-a">PhD in Computer Science and Engineering</div></td>
+  <td><div class="cv-block-b">Sept 2019 – Mar 2024</div></td>
 </tr>
 <tr>
   <td><div class="cv-block-c">University of California, Santa Cruz</div></td>
@@ -231,7 +223,7 @@ sophomoric concern with the <a href="https://en.wikipedia.org/wiki/Measurement_p
 <table>
 <tr>
   <td><div class="cv-block-a">BSc in Physics, College of Creative Studies</div></td>
-  <td><div class="cv-block-b">Fall 2011 – Spring 2015</div></td>
+  <td><div class="cv-block-b">Sept 2011 – June 2015</div></td>
 </tr>
 <tr>
   <td><div class="cv-block-c">University of California, Santa Barbara</div></td>
@@ -248,9 +240,10 @@ sophomoric concern with the <a href="https://en.wikipedia.org/wiki/Measurement_p
 </ul>
 </div>
 </div>
+
 <div id="outline-container-Awards" class="outline-2">
 <h2 id="Awards">Awards</h2>
-<div class="outline-text-2" id="text-orgc39ad91">
+<div class="outline-text-2" id="text-orgf1c0b01">
 <table class='awards'>
 <tr>
 <td class="awards-a"><p><b>Paper Awards</b></p></td>
@@ -339,15 +332,17 @@ sophomoric concern with the <a href="https://en.wikipedia.org/wiki/Measurement_p
 </tr></table>
 </div>
 </div>
+
+
 <div id="outline-container-Work-amp-Research-Experience" class="outline-2">
 <h2 id="Work-amp-Research-Experience">Work &amp; Research Experience</h2>
-<div class="outline-text-2" id="text-orgf454112">
+<div class="outline-text-2" id="text-orga46faba">
 
 <div class="cv-block">
 <table>
 <tr>
   <td><div class="cv-block-a">Graduate Student Researcher</div></td>
-  <td><div class="cv-block-b">Sept 2019 – Present</div></td>
+  <td><div class="cv-block-b">Sept 2019 – Mar 2024</div></td>
 </tr>
 <tr>
   <td><div class="cv-block-c">Human-Centered Machine Learning</div></td>
@@ -465,20 +460,22 @@ With a paid undergraduate research internship awarded by the UC Santa Barbara Ce
 </ul>
 </div>
 </div>
+
+
 <div id="outline-container-Publications" class="outline-2">
 <h2 id="Publications">Publications</h2>
-<div class="outline-text-2" id="text-org199a52e">
+<div class="outline-text-2" id="text-org679d04a">
 <p>
 {7} Fair Participation via Sequential Policies <br>
 <strong>Reilly Raab</strong>, Ross Boczar, Maryam Fazel, and Yang Liu <br>
-<em>AAAI. (2024)</em>
+<em><span class="underline">AAAI</span>. (2024)</em>
 </p>
 
 <p>
 {6} <a href="https://arxiv.org/abs/2304.09362">Long-Term Fairness with Unknown Dynamics</a> <br>
 Tongxin Yin<sup><a id="fnr.1" class="footref" href="#fn.1" role="doc-backlink">[1]</a></sup>, <strong>Reilly Raab</strong><sup><a id="fnr.1.100" class="footref" href="#fn.1" role="doc-backlink">[1]</a></sup>, Mingyan Liu, and Yang Liu <br>
-<em>ICLR RTML (2023) &#x2013; <strong>Best Paper Runner-Up</strong>, <strong>Highlighted Paper Award</strong></em> <br>
-<em>NeurIPS. (2023)</em>
+<em>ICLR RTML (2023) &#x2013; <span class="underline">Best Paper Runner-Up</span>, <span class="underline">Highlighted Paper Award</span></em> <br>
+<em><span class="underline">NeurIPS</span>. (2023)</em>
 </p>
 
 <p>
@@ -490,13 +487,13 @@ Tongxin Yin<sup><a id="fnr.1" class="footref" href="#fn.1" role="doc-backlink">[
 <p>
 {4} <a href="https://openreview.net/pdf?id=U3gobB4oKv">Fairness Transferability Subject to Bounded Distribution Shift</a> <br>
 Yatong Chen<sup><a id="fnr.1.100" class="footref" href="#fn.1" role="doc-backlink">[1]</a></sup>, <strong>Reilly Raab</strong><sup><a id="fnr.1.100" class="footref" href="#fn.1" role="doc-backlink">[1]</a></sup>, Jialu Wang, and Yang Liu <br>
-<em>NeurIPS. (2022)</em>
+<em><span class="underline">NeurIPS</span>. (2022)</em>
 </p>
 
 <p>
 {3} <a href="https://proceedings.neurips.cc/paper/2021/file/db00f1b7fdf48fd26b5fb5f309e9afaf-Paper.pdf">Unintended Selection: Persistent Qualification Rate Disparities and Interventions</a> <br>
 <strong>Reilly Raab</strong> and Yang liu <br>
-<em>NeurIPS. (2021) &#x2013; <strong>Spotlight Paper Award</strong></em>
+<em><span class="underline">NeurIPS</span>. (2021) &#x2013; <span class="underline">Spotlight Paper Award</span></em>
 </p>
 
 <p>
