--- a/reading-list.html
+++ b/reading-list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-11 Thu 09:38 -->
+<!-- 2024-04-17 Wed 09:49 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Digital Bookshelf</title>
@@ -62,15 +62,29 @@ tbody > tr:first-of-type h4 {
 <center>
 <em>Your local library may be an alternative to <a href="https://libgen.rs/">Library Genesis</a>
 or <a href="https://sci-hub.st/">Sci-hub</a></em>.
+<br/>
+Public domain books may be available via <a href="https://www.gutenberg.org/">Project Gutenberg</a>.
 </center>
 </p>
+
+<p>
+<table>
+</p>
+<tr>
+  <td colspan="3">
+    <h4>Lecture Series</h4>
+  </td>
+</tr>
+
+
+
 <div id="outline-container-Math-and-Science" class="outline-2">
 <h2 id="Math-and-Science">Math and Science</h2>
-<div class="outline-text-2" id="text-org358f216">
+<div class="outline-text-2" id="text-org47afbda">
 </div>
 <div id="outline-container-Physics" class="outline-3">
 <h3 id="Physics">Physics</h3>
-<div class="outline-text-3" id="text-orge81edde">
+<div class="outline-text-3" id="text-orgd26d570">
 <table>
   <tr>
     <td colspan="3">
@@ -120,9 +134,10 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </table>
 </div>
 </div>
+
 <div id="outline-container-Computer-Science" class="outline-3">
 <h3 id="Computer-Science">Computer Science</h3>
-<div class="outline-text-3" id="text-orgf81c657">
+<div class="outline-text-3" id="text-org357d575">
 <table>
   <tr>
     <td colspan="3">
@@ -172,9 +187,10 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </table>
 </div>
 </div>
+
 <div id="outline-container-Mathematics" class="outline-3">
 <h3 id="Mathematics">Mathematics</h3>
-<div class="outline-text-3" id="text-org37ec73c">
+<div class="outline-text-3" id="text-org192cd9f">
 <table>
   <tr>
     <td> <a href="https://www.youtube.com/playlist?list=PLMrJAkhIeNNR20Mz-VpzgfQs5zrYi085m">Control Bootcamp</a></td>
@@ -189,9 +205,10 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </table>
 </div>
 </div>
+
 <div id="outline-container-General" class="outline-3">
 <h3 id="General">General</h3>
-<div class="outline-text-3" id="text-org36d64f9">
+<div class="outline-text-3" id="text-org89c09d7">
 <table>
    <tr>
     <td colspan="3">
@@ -217,13 +234,15 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </div>
 </div>
 </div>
+
+
 <div id="outline-container-Humanities" class="outline-2">
 <h2 id="Humanities">Humanities</h2>
-<div class="outline-text-2" id="text-orgb554628">
+<div class="outline-text-2" id="text-org3d831db">
 </div>
 <div id="outline-container-Anthropology" class="outline-3">
 <h3 id="Anthropology">Anthropology</h3>
-<div class="outline-text-3" id="text-org56d0a2c">
+<div class="outline-text-3" id="text-orgf8baeb9">
 <table>
   <tr>
     <td colspan="3">
@@ -248,9 +267,10 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </table>
 </div>
 </div>
+
 <div id="outline-container-History" class="outline-3">
 <h3 id="History">History</h3>
-<div class="outline-text-3" id="text-org6ac7b8d">
+<div class="outline-text-3" id="text-orgd550089">
 <table>
   <tr>
     <td colspan="3">
@@ -290,9 +310,10 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </table>
 </div>
 </div>
+
 <div id="outline-container-Economics-and-Finance" class="outline-3">
 <h3 id="Economics-and-Finance">Economics and Finance</h3>
-<div class="outline-text-3" id="text-org9197879">
+<div class="outline-text-3" id="text-orgedda33e">
 <table>
   <tr>
     <td colspan="3">
@@ -342,9 +363,10 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </table>
 </div>
 </div>
+
 <div id="outline-container--American-Class-amp-Culture" class="outline-3">
 <h3 id="-American-Class-amp-Culture">(American) Class &amp; Culture</h3>
-<div class="outline-text-3" id="text-orgfe5cbb9">
+<div class="outline-text-3" id="text-org48d3cf1">
 <table>
   <tr>
     <td colspan="3">
@@ -405,9 +427,10 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </table>
 </div>
 </div>
+
 <div id="outline-container--Geo-Politics" class="outline-3">
 <h3 id="-Geo-Politics">(Geo)Politics</h3>
-<div class="outline-text-3" id="text-org1fbce8f">
+<div class="outline-text-3" id="text-org2c33ccf">
 <table>
   <tr>
     <td colspan="3">
@@ -434,9 +457,10 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </div>
 </div>
 </div>
+
 <div id="outline-container-Personal" class="outline-2">
 <h2 id="Personal">Personal</h2>
-<div class="outline-text-2" id="text-orgc54a67f">
+<div class="outline-text-2" id="text-org1d25680">
 <table>
   <tr>
     <td colspan="3">
@@ -486,9 +510,10 @@ or <a href="https://sci-hub.st/">Sci-hub</a></em>.
 </table>
 </div>
 </div>
+
 <div id="outline-container-Fiction" class="outline-2">
 <h2 id="Fiction">Fiction</h2>
-<div class="outline-text-2" id="text-org27a9a1e">
+<div class="outline-text-2" id="text-org56807af">
 <table>
   <tr>
     <td colspan="3">
@@ -532,7 +557,7 @@ Caveat lector.</em>
 </div>
 </main>
 <footer id="postamble" class="boilerplate">
-Copyright © 2023 Reilly Raab
+Copyright © 2024 Reilly Raab
 </footer>
 </body>
 </html>
