--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-04-17 Wed 09:44 -->
+<!-- 2024-05-06 Mon 08:42 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Reilly Raab</title>
@@ -52,8 +52,8 @@ table {
   <div>
 
 
-<figure id="org383ac93">
-<img src="./img/raab_headshot.jpg" alt="raab_headshot.jpg">
+<figure id="org63fedde">
+<img src="./img/yosemite_village.jpg" alt="yosemite_village.jpg">
 
 </figure>
 
